--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "algoliasearch": "^4.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-instantsearch-hooks-web": "^6.24.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
     "react-social-icons": "^5.13.0",
